2002-10-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :

	  - Fixed the bug that causes the eval function to think that
	    explicitly defined atoms are automatically logical consequences
	    of the other atoms. Now the eval_atom function only looks
	    for logical consequences, not explicitly defined atoms.

2002-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Now has more verbose error messages.

	* datastruct/simplelist.c :
	* datastruct/stringlist.c :
	* ident/ident.c :
	* exp/comp_atom.h :
	* exp/gnd_atom.h :
	* exp/name.c :
	* trans/transdef.c :
	* trans/transref.c :

	  - Used global malloc macro.

	* common/epilog.h :

	  - Added malloc macros.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* exp/comp_atom.c : 
	* exp/comp_exp.c :
	* exp/comp_exp.h :
	* exp/expression.h :
	* exp/gnd_atom.c :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :
	* exp/name.c :
	* ident/ident.c :
	* ident/ident.h :
	* ident/identlist.c :
	* ident/identlist.h :
	* ident/symtab.c :
	* ident/symtab.h :
	* trans/transdef.c :
	* trans/transdef.h :
	* trans/translist.c :
	* trans/translist.h :
	* trans/transref.c :
	* trans/transref.h :
	* trans/transtab.c :
	* trans/transtab.h :

	  - Now uses the globally-defined error codes.

	  - Some cleanup.

	* exp/comp_atom.c :
	* exp/comp_atom.h :
	* exp/comp_exp.c :
	* exp/expression.h :
	* exp/gnd_atom.c :
	* exp/gnd_atom.h :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :
	* main/epilog.c :
	* parser/parser.y :
	* trans/transtab.c :

	  - Now uses the macro-defined truth symbols and result types. got
	    rid of res_type and truth_type.

	* Makefile :
	* common/Makefile :
	* common/epilog.h :

	  - Added a global common header file that defines: version,
	    error codes, boolean and result constants.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Unified error codes / return values for both lists.